--- a/ROOT/WebContent/css/style.css
+++ b/ROOT/WebContent/css/style.css
@@ -1,11 +1,64 @@
-@import url("https://googledrive.com/host/0BxmAw3HA4YGCfk5LdE5KZ1AyQXFuYTBDVm8xQVp2OW91YVRGZW1ySHlDbmlaNE5CRlBERlU/seoul-namsan-jung-b.css");
+@font-face{
+  font-family: 'hoon';
+  font-style: normal;
+  font-weight: normal;
+  src: url('/font/HoonWhitecatR.eot'); 
+  src: local('¡Ø'), url('/font/HoonWhitecatR.woff') format('woff');
+}
 
-body { margin: 0; font-family:'Nanum Gothic'; font-size: 18px; font-family: seoul-namsan-jung-b; }
+body { margin: 0; padding: 0; font-family: 'hoon'; font-size: 18px; }
 div, header, footer, section, nav { position: relative;}
 img { vertical-align: top; max-width: 100%; }
 ul { margin: 0; padding: 0; }
 li { list-style: none; }
 
-.intro { width: 100%; height: 950px; background-image: url('/img/intro_background.png'); background-size: cover; opacity: 0.7; }
-.intro .main { width: 150px; height: 50px; left: 50px; top: 50px; font-size: 30px; cursor: pointer; display: inline-block; }
-.intro .d_day { width: 300px; height: 100px; left:650px; top: 150px; display: inline-block; font-size: 30px; text-align: center; }
+.intro_wrap { width: 100%; font-size: 0px; }
+.intro_inner { width: 300px; display: inline-block; left: 50%; top: 50%; transform: translate3d(-50%, -50%, 0); }
+.intro_wrap .intro_txt { width: 30%; height: 100vh; display: inline-block; vertical-align: top; }
+.intro_wrap .intro_txt .intro_main { width: 33.33%; cursor: pointer; margin: 0 auto; }
+.intro_wrap .intro_txt .intro_d_day { width: 100%; height: 100px; font-size: 30px; text-align: center; }
+.intro_wrap .intro_txt .intro_people { width: 33.33%; padding: 300px 0 30px 0; margin: 0 auto; }
+.intro_wrap .intro_picture { width: 70%; height: 100vh; background-image: url('/img/intro_picture.png'); background-size: cover; opacity: 0.7; display: inline-block; background-position: center center; background-repeat: no-repeat; }
+
+header { width: 100%; }
+.header_inner { width: 1000px; margin: 0 auto; }
+.header_inner .header_logo { width: 170px; margin: 0 auto; padding: 15px 0; cursor: pointer; }
+.header_inner .header_gnb { width: 100%; font-size: 0; padding: 15px 0; }
+.header_inner .header_gnb .gnb { width: 20%; display: inline-block; text-align: center; font-size: 30px; }
+.header_inner .header_gnb .gnb span { cursor: pointer; }
+.header_inner .header_gnb .gnb span:hover { color: pink; }
+
+.main { width: 100%; height: 100%; overflow-y: hidden; }
+.main .img1 { width: 100%; height: 100%; background-image: url('/img/11.jpg'); background-size: 100%; background-repeat: no-repeat; }
+.main .img2 { width: 100%; height: 100%; background-image: url('/img/22.jpg'); background-size: 100%; background-repeat: no-repeat; }
+.main .img3 { width: 100%; height: 100%; background-image: url('/img/33.jpg'); background-size: 100%; background-repeat: no-repeat; }
+.main .img4 { width: 100%; height: 100%; background-image: url('/img/44.jpg'); background-size: 100%; background-repeat: no-repeat; }
+.main .img5 { width: 100%; height: 100%; background-image: url('/img/55.jpg'); background-size: 100%; background-repeat: no-repeat; }
+.main .main_inner { width: 1000px; margin: 0 auto; }
+.main .section1 .banner { width: 80%; margin: auto auto; display: inline-block; background-image: url('/img/main_section1_banner.png'); text-align: center; padding: 5px 0; }
+.main .section1 .banner .banner_people { padding: 2px; }
+.main .section1 .banner .banner_d_day { font-size: 20px; padding: 3px; }
+.main .section1 .main_login { width: 20%; margin: 0 auto; display: inline-block; float: right; text-align: center; padding: 10px 0; }
+.main .section1 .main_login .txt { width: 50px; font-size: 18px; font-weight: bold; padding: 2px 0; margin-top: 10px; display: inline-block; }
+.main .section1 .main_login input { width: 100px; border-radius: 5px; padding-left: 5px; display: inline-block; }
+.main .section1 .main_login .btn { width: 50px; height: 20px; border: 1px solid #fda8ec; border-radius: 3px; cursor: pointer; display: inline-block; margin: 20px 10px 0 10px; text-align: center; padding: 2px; }
+
+@media all and (max-width: 1200px) { 
+	.intro_wrap .intro_txt { width: 100%; height: 100px; position: fixed; top: 0; left: 0; background-color: white; z-index: 2; }
+	.intro_inner { width: 100%; left: 0; top: 0; transform: none; }
+	.intro_wrap .intro_txt .intro_main { width: 150px; float: left; left: 25px; top: 25px; }
+	.intro_wrap .intro_txt .intro_people { width: 85px; padding: 0 0 0 0; position: absolute; top: 5px; right: 230px; }
+	.intro_wrap .intro_txt .intro_d_day { width: 200px; float: right; top: 5px; }
+	.intro_wrap .intro_picture { width: 100%; }
+}
+
+@media all and (max-width: 1000px) { 
+	.header_inner { width: 100%; }
+}
+
+@media all and (max-width: 550px) { 
+	.intro_wrap .intro_txt .intro_main { width: 100px; top: 35px; }
+	.intro_wrap .intro_txt .intro_d_day { font-size: 25px; top: 15px; }
+	.intro_wrap .intro_txt .intro_people { display: none; }
+	.intro_wrap .intro_picture { background-position: center center; }
+}
