--- a/ROOT/WebContent/css/style.css
+++ b/ROOT/WebContent/css/style.css
@@ -42,6 +42,9 @@ footer { width: 100%; margin: 20px auto; }
 .main .section1 .main_login .txt { width: 50px; font-size: 18px; font-weight: bold; padding: 2px 0; margin-top: 20px; display: inline-block; }
 .main .section1 .main_login input { width: 100px; border-radius: 5px; padding-left: 5px; display: inline-block; }
 .main .section1 .main_login .btn { width: 50px; height: 20px; border: 1px solid #fda8ec; border-radius: 3px; cursor: pointer; display: inline-block; margin: 20px 10px 0 10px; text-align: center; padding: 2px; }
+.main .section1 .main_logon { width: 20%; height: 140px; display: inline-block; float: right; text-align: center; }
+.main .section1 .main_logon .txt { width: 120px; font-size: 18px; font-weight: bold; padding: 2px 0; margin-top: 30px; display: inline-block; }
+.main .section1 .main_logon .btn { width: 50px; height: 20px; border: 1px solid #fda8ec; border-radius: 3px; cursor: pointer; display: inline-block; margin: 20px 10px 0 10px; text-align: center; padding: 2px; }
 
 .main .section2 .middle { width: 80%; display: inline-block; }
 .main .section2 .slider { width: 800px; height: 300px; overflow: hidden; margin-top: 20px; }
@@ -85,6 +88,19 @@ footer { width: 100%; margin: 20px auto; }
 .main .section3 .calendar .data .data_box .calendar_table { width: 100%; height: 100%; }
 .main .section3 .calendar .data .data_box .calendar_table .txt1 { color: blue; }
 .main .section3 .calendar .data .data_box .calendar_table .txt2 { color: red; }
+
+.popup_back { width: 100%; height: 100%; background-color: #e7e7e7; opacity: 0.7; z-index: 2; display: none; position: fixed; top: 0; left: 0; }
+.popup_front { width: 400px; height: 180px; background-color: white; z-index: 3; display: none; position: fixed; top: 50%; left: 50%; transform: translate3d( -50%, -50%, 0); border: 2px solid #fefcb4; }
+.popup_front .txt_wrap { width: 90%; text-align: center; margin: 20px auto; }
+.popup_front .txt_day { font-size: 24px; margin-bottom: 20px; display: inline-block; padding: 10px 10px; border: 1px solid #77e2f8; }
+.popup_front .txt_schedule { font-size: 20px; height: 25px; padding-top: 5px; border: 1px solid #f39eaf; }
+.popup_front .txt_schedule input { width: 345px; height: 20px; border: 0px; display: none; padding-left: 10px; }
+.popup_front .btn_wrap { width: 200px; margin: 0 auto; text-align: center; }
+.popup_front .btn { width: 60px; height: 20px; border: 1px solid #6af277; border-radius: 5px; display: inline-block; padding-top: 5px; }
+.popup_front .btn_hidden { display: none; }
+.popup_front .btn span { cursor: pointer; font-size: 18px; }
+.popup_front .remove_wrap { width: 100%; height: 100px; position: fixed; z-index: 3; display: none; background-color: white; margin: 40px auto; }
+.popup_front .remove_wrap .remove_txt { margin-bottom: 20px; font-size: 20px; }
 
 @media all and (max-width: 1200px) { 
 	.intro_wrap .intro_txt { width: 100%; height: 100px; position: fixed; top: 0; left: 0; background-color: white; z-index: 2; }
