--- a/ROOT/WebContent/css/style.css
+++ b/ROOT/WebContent/css/style.css
@@ -9,7 +9,7 @@
 body { margin: 0; padding: 0; font-family: 'hoon'; font-size: 18px; }
 div, header, footer, section, nav { position: relative;}
 img { vertical-align: top; max-width: 100%; }
-ul { margin: 0; padding: 0; }
+ul, table, tr, td { margin: 0; padding: 0; }
 li { list-style: none; }
 
 .intro_wrap { width: 100%; font-size: 0px; }
@@ -38,11 +38,12 @@ footer { width: 100%; margin: 20px auto; }
 .main .section1 .banner { width: 80%; margin: auto auto; display: inline-block; background-image: url('/img/main_section1_banner.png'); text-align: center; padding: 5px 0; }
 .main .section1 .banner .banner_people { padding: 2px; }
 .main .section1 .banner .banner_d_day { font-size: 20px; padding: 3px; }
-.main .section1 .main_login { width: 20%; height: 140px; display: inline-block; float: right; text-align: center; }
-.main .section1 .main_login .txt { width: 50px; font-size: 18px; font-weight: bold; padding: 2px 0; margin-top: 20px; display: inline-block; }
-.main .section1 .main_login input { width: 100px; border-radius: 5px; padding-left: 5px; display: inline-block; }
-.main .section1 .main_login .btn { width: 50px; height: 20px; border: 1px solid #fda8ec; border-radius: 3px; cursor: pointer; display: inline-block; margin: 20px 10px 0 10px; text-align: center; padding: 2px; }
-.main .section1 .main_logon { width: 20%; height: 140px; display: inline-block; float: right; text-align: center; }
+.main .section1 .main_login { width: 19%; height: 138px; display: inline-block; float: right; text-align: center; border: 1px solid pink; }
+.main .section1 .main_login .txt { width: 50px; font-size: 18px; font-weight: bold; padding: 2px 0; margin-top: 15px; display: inline-block; }
+.main .section1 .main_login .loginFail { display: none; margin-top: 10px; font-size: 14px; color: red; }
+.main .section1 .main_login input { width: 100px; padding-left: 5px; display: inline-block; }
+.main .section1 .main_login .btn { width: 50px; height: 20px; border: 1px solid #fda8ec; border-radius: 3px; cursor: pointer; display: inline-block; margin: 10px 10px; text-align: center; padding: 2px; }
+.main .section1 .main_logon { width: 19%; height: 138px; display: inline-block; float: right; text-align: center; border: 1px solid pink; }
 .main .section1 .main_logon .txt { width: 120px; font-size: 18px; font-weight: bold; padding: 2px 0; margin-top: 30px; display: inline-block; }
 .main .section1 .main_logon .btn { width: 50px; height: 20px; border: 1px solid #fda8ec; border-radius: 3px; cursor: pointer; display: inline-block; margin: 20px 10px 0 10px; text-align: center; padding: 2px; }
 
@@ -74,7 +75,8 @@ footer { width: 100%; margin: 20px auto; }
 .main .section2 .bottom .content .no_content { width: 100%; text-align: center; font-size: 20px; margin: 10px 0;}
 
 .main .section3 .calendar { width: 100%; height: 300px; margin-top: 20px; }
-.main .section3 .calendar .side { width: 30%; display: inline-block; top: 50%; transform: translateY(-50%); text-align: center; }
+.main .section3 .calendar::after { content: " "; display: block; clear:both; }
+.main .section3 .calendar .side { width: 30%; top: 50%; transform: translateY(-50%); text-align: center; position: absolute; }
 .main .section3 .calendar .side .txt { font-size: 25px; padding: 10px 0; }
 
 .main .section3 .calendar .data { width: 70%; height: 300px; float: right; }
@@ -85,20 +87,23 @@ footer { width: 100%; margin: 20px auto; }
 .main .section3 .calendar .data .data_top .arrow_wrap .month { position: absolute;  left: 50%; transform: translateX(-50%); font-size: 25px; padding-top: 5px; }
 .main .section3 .calendar .data .data_top .arrow_wrap .today { display: inline-block; float: right; padding-top: 25px; cursor: pointer; }
 .main .section3 .calendar .data .data_box { width: 500px; height: 250px; border: 1px solid pink; }
-.main .section3 .calendar .data .data_box .calendar_table { width: 100%; height: 100%; }
+.main .section3 .calendar .data .data_box .calendar_table { width: 100%; height: 100%; border-collapse: collapse; }
 .main .section3 .calendar .data .data_box .calendar_table .txt1 { color: blue; }
 .main .section3 .calendar .data .data_box .calendar_table .txt2 { color: red; }
+.main .section3 .calendar .data .data_box .calendar_table .day { width: 66px; height: 46px; vertical-align: top; }
+.main .section3 .calendar .data .data_box .calendar_table .day .schedule_txt { font-size: 14px; }
 
 .popup_back { width: 100%; height: 100%; background-color: #e7e7e7; opacity: 0.7; z-index: 2; display: none; position: fixed; top: 0; left: 0; }
-.popup_front { width: 400px; height: 180px; background-color: white; z-index: 3; display: none; position: fixed; top: 50%; left: 50%; transform: translate3d( -50%, -50%, 0); border: 2px solid #fefcb4; }
+.popup_front { width: 400px; height: 180px; background-color: white; z-index: 3; display: none; position: fixed; top: 50%; left: 50%; transform: translate3d( -50%, -50%, 0); border: 2px solid pink; }
 .popup_front .txt_wrap { width: 90%; text-align: center; margin: 20px auto; }
-.popup_front .txt_day { font-size: 24px; margin-bottom: 20px; display: inline-block; padding: 10px 10px; border: 1px solid #77e2f8; }
-.popup_front .txt_schedule { font-size: 20px; height: 25px; padding-top: 5px; border: 1px solid #f39eaf; }
+.popup_front .txt_day { font-size: 24px; margin-bottom: 20px; display: inline-block; padding: 10px 10px; border-bottom: 2px solid #77e2f8; }
+.popup_front .txt_schedule { font-size: 20px; height: 25px; padding-top: 5px; border: 1px solid black; }
 .popup_front .txt_schedule input { width: 345px; height: 20px; border: 0px; display: none; padding-left: 10px; }
 .popup_front .btn_wrap { width: 200px; margin: 0 auto; text-align: center; }
-.popup_front .btn { width: 60px; height: 20px; border: 1px solid #6af277; border-radius: 5px; display: inline-block; padding-top: 5px; }
+.popup_front .btn { width: 60px; height: 20px; display: inline-block; padding-top: 5px; }
 .popup_front .btn_hidden { display: none; }
 .popup_front .btn span { cursor: pointer; font-size: 18px; }
+.popup_front .btn:HOVER { color: pink; }
 .popup_front .remove_wrap { width: 100%; height: 100px; position: fixed; z-index: 3; display: none; background-color: white; margin: 40px auto; }
 .popup_front .remove_wrap .remove_txt { margin-bottom: 20px; font-size: 20px; }
 
