--- a/ROOT/WebContent/css/style.css
+++ b/ROOT/WebContent/css/style.css
@@ -92,6 +92,7 @@ footer { width: 100%; margin: 20px auto; }
 .main .section3 .calendar .data .data_box .calendar_table .txt2 { color: red; }
 .main .section3 .calendar .data .data_box .calendar_table .day { width: 66px; height: 46px; vertical-align: top; }
 .main .section3 .calendar .data .data_box .calendar_table .day .schedule_txt { font-size: 14px; }
+.main .section3 .calendar .data .data_box .calendar_table .day .schedule_txt .txt { cursor: pointer; }
 
 .popup_back { width: 100%; height: 100%; background-color: #e7e7e7; opacity: 0.7; z-index: 2; display: none; position: fixed; top: 0; left: 0; }
 .popup_front { width: 400px; height: 180px; background-color: white; z-index: 3; display: none; position: fixed; top: 50%; left: 50%; transform: translate3d( -50%, -50%, 0); border: 2px solid pink; }
@@ -103,9 +104,31 @@ footer { width: 100%; margin: 20px auto; }
 .popup_front .btn { width: 60px; height: 20px; display: inline-block; padding-top: 5px; }
 .popup_front .btn_hidden { display: none; }
 .popup_front .btn span { cursor: pointer; font-size: 18px; }
-.popup_front .btn:HOVER { color: pink; }
+.popup_front .btn span:HOVER { color: pink; }
 .popup_front .remove_wrap { width: 100%; height: 100px; position: fixed; z-index: 3; display: none; background-color: white; margin: 40px auto; }
 .popup_front .remove_wrap .remove_txt { margin-bottom: 20px; font-size: 20px; }
+
+.diary_section { font-size: 0px; }
+.diary_section::after { content: " "; display: block; clear: both; }
+.diary_section .diary_view { width: 70%; height: 600px; display: inline-block; vertical-align: top; float: left; }
+.diary_section .diary_view .view_title_wrap { height: 40px; margin: 20px 50px; padding: 0 10px; line-height: 40px; }
+.diary_section .diary_view .view_title { font-size: 18px; width: 85%; display: inline-block; }
+.diary_section .diary_view .view_day { font-size: 18px; width: 15%; display: inline-block; }
+.diary_section .diary_view .view_content_wrap { height: 440px; margin: 20px 50px; padding: 30px 15px; border-top: 2px solid pink; border-bottom: 2px solid pink; border-left: 1px solid #fdeffd; border-right: 1px solid #fdeffd; overflow-y: auto; }
+.diary_section .diary_view .view_content { font-size: 18px; }
+.diary_section .diary_list_wrap { width: 30%; height: 600px; display: inline-block; vertical-align: top; }
+.diary_section .diary_list_wrap .list_top { height: 40px; margin: 20px 10px; padding: 0 10px; line-height: 40px; }
+.diary_section .diary_list_wrap .list_no { width: 10%; height: 45px; font-size: 18px; display: inline-block; text-align: center; line-height: 45px; }
+.diary_section .diary_list_wrap .list_title { width: 70%; height: 45px; font-size: 18px; display: inline-block; margin:0 20px; line-height: 45px; }
+.diary_section .diary_list_wrap .list { height: 500px; margin: 20px 10px; padding: 0 10px; border-top: 2px solid pink; border-bottom: 2px solid pink; }
+.diary_section .diary_list_wrap .list .diary_list { height: 45px; border-bottom: 1px solid #fdeffd; cursor: pointer; }
+.diary_section .diary_list_wrap .list .diary_list:nth-child(10) { border-bottom: none; }
+.diary_section .diary_list_wrap .list .sel { background-color: #fffafd; border-top: 1px solid pink; border-bottom: 1px solid pink; }
+.diary_section .diary_list_wrap .list .sel:first-child { border-top: none; }
+.diary_section .diary_list_wrap .list .sel:nth-child(10) { border-bottom: 1px solid pink; }
+.diary_section .diary_list_wrap .list .page { width: 100%; height: 30px; line-height: 30px; text-align: center; }
+.diary_section .diary_list_wrap .list .page .txt { width: 30px; font-size: 16px; display: inline-block; }
+.diary_section .diary_list_wrap .list .page .txt span { cursor: pointer; }
 
 @media all and (max-width: 1200px) { 
 	.intro_wrap .intro_txt { width: 100%; height: 100px; position: fixed; top: 0; left: 0; background-color: white; z-index: 2; }
@@ -140,6 +163,16 @@ footer { width: 100%; margin: 20px auto; }
 	.main .section3 .calendar .data { width: 100%; }
 	.main .section3 .calendar .data .data_top .arrow_wrap { width: 100%; }
 	.main .section3 .calendar .data .data_box { width: 98%; margin: 0 5px; }
+	
+	.diary_section .diary_view { width: 100%; height: 480px; float: right; }
+	.diary_section .diary_list_wrap { width: 100%; height: 335px; }
+	.diary_section .diary_list_wrap .list_top { height: 25px; margin: 0 10px; line-height: 25px; }
+	.diary_section .diary_list_wrap .list { height: 290px; margin: 0 10px; }
+	.diary_section .diary_list_wrap .list .diary_list { height: 25px; }
+	.diary_section .diary_list_wrap .list_no { height: 25px; line-height: 25px; }
+	.diary_section .diary_list_wrap .list_title { height: 25px; line-height: 25px; }
+	.diary_section .diary_view .view_title_wrap { height: 25px; line-height: 25px; margin-bottom: 0px; margin-left: 10px; margin-right: 10px; }
+	.diary_section .diary_view .view_content_wrap { height: 350px; margin-top: 0px; margin-left: 10px; margin-right: 10px; }
 }
 
 @media all and (max-width: 550px) { 
