--- a/ROOT/WebContent/css/style.css
+++ b/ROOT/WebContent/css/style.css
@@ -62,7 +62,8 @@ footer { width: 100%; margin: 20px auto; }
 .main .section2 .side .movie { width: 95%; height: 300px; display: inline-block; text-align: center; }
 .main .section2 .side .theater { width: 95%; height: 300px; display: inline-block; text-align: center; }
 .main .section2 .side .title { font-size: 25px; margin-top: 10px; border-bottom: 1px solid pink; border-bottom-style: dashed; }
-.main .section2 .side .txt { font-size: 20px; margin-top: 10px; text-align: left; left: 30px; }
+.main .section2 .side .txt { font-size: 20px; margin-top: 10px; text-align: left; padding-left: 20px; }
+.main .section2 .side .txt span { width: 100%; display: inline-block; padding: 2px 0; cursor: pointer; }
 
 .main .section2 .bottom { width: 80%; display: inline-block; }
 .main .section2 .bottom .tab1 { width: 32%; margin: 0 5px; display: inline-block; float: left; }
@@ -154,6 +155,20 @@ footer { width: 100%; margin: 20px auto; }
 .diary_section .diary_list_wrap .list .page_arrow .arrow_right { display: none; right: 0; position: absolute; cursor: pointer; z-index: 2; }
 .diary_section .diary_list_wrap .list .page_arrow .arrow_right:HOVER { color: pink; }
 .diary_section .diary_list_wrap .list .no_content { font-size: 18px; text-align: center; line-height: 50px; }
+
+.movie_section { font-size: 0px; }
+.movie_section::after { content: " "; display: block; clear: both; }
+.movie_section .movie_view { width: 70%; height: 550px; display: inline-block; vertical-align: top; float: left; }
+.movie_section .movie_view .view_content_wrap { height: 440px; margin: 20px 50px; padding: 30px 15px; border-top: 2px solid pink; border-bottom: 2px solid pink; border-left: 1px solid #fdeffd; border-right: 1px solid #fdeffd; }
+.movie_section .movie_view .view_content_wrap .view_poster { width: 100%; height: 100%; background-repeat: no-repeat; background-size: contain; background-position: center center; }
+
+.movie_section .movie_list_wrap { width: 30%; height: 550px; display: inline-block; vertical-align: top; }
+.movie_section .movie_list_wrap .list { height: 500px; margin: 20px 10px; padding: 0 10px; border-top: 2px solid pink; border-bottom: 2px solid pink; }
+.movie_section .movie_list_wrap .list .list_wrap { height: 470px; }
+.movie_section .movie_list_wrap .list .movie_wrap { border-bottom: 1px solid #fdeffd; line-height: 50px; }
+.movie_section .movie_list_wrap .list .movie_wrap:nth-child(10) { border-bottom: none; }
+.movie_section .movie_list_wrap .list .movie_wrap .movie_title { width: 20%; font-weight: bold; text-align: left; font-size: 18px; display: inline-block; vertical-align: top; }
+.movie_section .movie_list_wrap .list .movie_wrap .movie_content { width: 80%; text-align: left; font-size: 18px; display: inline-block; }
 
 @media all and (max-width: 1200px) { 
 	.intro_wrap .intro_txt { width: 100%; height: 100px; position: fixed; top: 0; left: 0; background-color: white; z-index: 2; }
